SSG-7847 - Rest Management API - fixing memory issue in skunkworks migration tests
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@39557 219f1c6e-4a0e-43c8-96f2-6e749be13fd4